# SPhyR

./: .env  .env.example  .gitignore  README.md  highlighted_output.tex  prompt_templates.py  pyproject.toml  run_eval.py
dataset_creation/: raw_data_2D_to_huggingface_datasets.py  raw_data_to_huggingface_datasets.py
results/: few_shot_comparison_results_to_latex.tex  few_shot_comparison_results_to_latex_side_by_side.tex  physics_enhanced_neutral_prompt_comparison_results_to_latex.tex  physics_enhanced_neutral_prompt_comparison_results_to_latex_side_by_side.tex  plot_results.py  results_to_latex.py  results_to_latex_appendix.tex  results_to_latex_main_body.tex  results_to_latex_main_body_side_by_side.tex  rotation_best_model_results_to_latex.tex  rotation_best_model_results_to_latex_side_by_side.tex  rotation_comparison_results_to_latex.tex  rotation_comparison_results_to_latex_side_by_side.tex
results/claude-3-7-sonnet-20250219/: 10_random_cell_easy_aggregated_results.json  10_random_cell_easy_results.json  10_random_cell_hard_aggregated_results.json  10_random_cell_hard_results.json  1_random_cell_easy_aggregated_results.json  1_random_cell_easy_results.json  1_random_cell_hard_aggregated_results.json  1_random_cell_hard_results.json  1_random_column_easy_aggregated_results.json  1_random_column_easy_results.json  1_random_column_hard_aggregated_results.json  1_random_column_hard_results.json  1_random_row_easy_aggregated_results.json  1_random_row_easy_results.json  1_random_row_hard_aggregated_results.json  1_random_row_hard_results.json  full_easy_results.json  (+15 more)
(+5235 files in other folders)
