[project]
name = "sphyr"
version = "0.1.0"
description = ""
authors = [
    {name = "philippds",email = "p.d.siedler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.78.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "huggingface-hub (>=0.31.1,<0.32.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "google-genai (>=1.14.0,<2.0.0)",
    "anthropic (>=0.51.0,<0.52.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
